Se actualiza la primera pagina
Se actualiza la primera pagina practicando lso formatos de estilo y comportamiento

--- a/prueba1.html
+++ b/prueba1.html
@@ -1,9 +1,27 @@
 <!DOCTYPE html>
 <html>
+
+
 <head>
-	<title>Prueba #1</title>
+	<title>Learning Page</title>
 </head>
+
 <body>
-<h1>Hello World</h1>
+
+	<h1 style="color: DarkGreen; font-size: 68px; text-align: center;">
+	That page is only to practice</h1>
+		<p style="margin: 0 100px 0 100px; font-size: 14px">
+		Primer parrafo de la pagina.</p>
+		<p>Segundo parrafo de la pagina.</p>
+
+	<footer>
+		<hr>
+		<p  style="text-align: center;"
+			onclick="alert('GitHub is void'); ">
+		GitHub Repository: https://github.com/JsNcAr/WebDesign</p>
+	</footer>
+
 </body>
+
+
 </html>
