--- a/prueba1.html
+++ b/prueba1.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 
 
 <head>
+	<meta charset="utf-8">
 	<title>Learning Page</title>
+
 </head>
 
 <body>
@@ -12,12 +14,12 @@
 	That page is only to practice</h1>
 		<p style="margin: 0 100px 0 100px; font-size: 14px">
 		Primer parrafo de la pagina.</p>
-		<p>Segundo parrafo de la pagina.</p>
+		<p>Segundo parrafo de la pagina.<span>What's span?</span> </p>
 
 	<footer>
 		<hr>
 		<p  style="text-align: center;"
-			onclick="alert('GitHub is void'); ">
+			onclick="alert('GitHub is void'); " >
 		GitHub Repository: https://github.com/JsNcAr/WebDesign</p>
 	</footer>
 
