Semantic elements added

--- a/prueba1.html
+++ b/prueba1.html
@@ -6,15 +6,69 @@
 	<meta charset="utf-8">
 	<title>Learning Page</title>
 
+	<style>
+		aside {
+		  width: 30%;
+		  padding-left: 15px;
+		  margin-left: 15px;
+		  float: right;
+		  font-style: italic;
+		  background-color: lightgray;
+		}
+
+		section {
+		  width: 30%;
+		  padding-right: 15px;
+		  margin-right: 15px;
+		  float: left;
+		  font-style: italic;
+		  background-color: lightgray;
+		}
+	</style>
+
 </head>
+
 
 <body>
 
+	<header>
+		Navigation bar or logo 
+	</header>
+
 	<h1 style="color: DarkGreen; font-size: 68px; text-align: center;">
 	That page is only to practice</h1>
+
+	<nav>Navigation bar</nav>
+
+	<section>
+		<h2>Seccion 1</h2>
+		<article> <h3>Article 1</h3> </article>
+		<article> <h4>Article 2</h4> </article>
+	</section>
+
+		<aside>
+		Cosa Aside
+		<!--ol to order list-->
+		<ul>
+			
+			<li>Es util</li>
+			<li>Es linda</li>
+			<li>
+				Es computable
+				<ol>
+					<li>No se que es</li>
+					<li>Suena chingon</li>
+				</ol>
+			</li>
+
+		</ul>
+	</aside>
+
 		<p style="margin: 0 100px 0 100px; font-size: 14px">
 		Primer parrafo de la pagina.</p>
 		<p>Segundo parrafo de la pagina.<span>What's span?</span> </p>
+
+
 
 	<footer>
 		<hr>
