Se agrega hypertext
Se añade enlace a un nuevo docuemnto HTML5

--- a/prueba1.html
+++ b/prueba1.html
@@ -42,7 +42,7 @@
 
 	<section>
 		<h2>Seccion 1</h2>
-		<article> <h3>Article 1</h3> </article>
+		<article> <h3><a href="MainPrueba.html" title="Main">Article 1</a></h3> </article>
 		<article> <h4>Article 2</h4> </article>
 	</section>
 
@@ -54,7 +54,7 @@
 			<li>Es util</li>
 			<li>Es linda</li>
 			<li>
-				Es computable
+				Es &quot;computable &quot;
 				<ol>
 					<li>No se que es</li>
 					<li>Suena chingon</li>
